--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "seed": "DB_FILE=db.sqlite node database/seed.js"
+    "seed": "DB_FILE=db.sqlite node database/seed.js",
+    "dev": "DB_FILE=db.sqlite node index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -9,6 +10,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^8.0.1",
-    "eslint-config-wesbos": "^3.2.3"
+    "eslint-config-wesbos": "^3.2.3",
+    "express": "^4.18.2"
   }
 }
